kubernetes/apps/storage/garage/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/component: storage
    app.kubernetes.io/instance: garage
    app.kubernetes.io/name: garage
  name: garage-s3
spec:
  hostnames:
    - garage-s3.kantai.xyz
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: garage
          port: 3900
